--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "config": "^3.3.9",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.1.1",
     "winston": "^3.8.2"
   }
 }
