--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "config": "^3.3.9",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
     "mongoose": "^7.1.1",
     "winston": "^3.8.2"
   }
