--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.9.2",
     "mongoose": "^7.1.1",
     "winston": "^3.8.2"
   }
