Add author to project

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/keertyverma/mindmemo.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Keerty Verma",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/keertyverma/mindmemo/issues"
