--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "mindmemo",
   "version": "1.0.0",
   "description": "To manage task.",
-  "main": "server/app.js",
+  "main": "",
   "scripts": {
     "start": "node server/app.js",
     "dev": "nodemon server/app.js",
+    "client": "cd client && npm i && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
