--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "mindmemo",
+  "name": "server",
   "version": "1.0.0",
   "description": "To manage task.",
   "main": "",
   "scripts": {
-    "server": "cd server && npm start",
-    "client": "cd client && npm run dev",
-    "start": "concurrently -n 'server,client' -c \"yellow,blue\" \"npm run server\"   \"npm run client\" ",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +20,12 @@
   },
   "homepage": "https://github.com/keertyverma/mindmemo#readme",
   "dependencies": {
-    "concurrently": "^8.0.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
+    "joi": "^17.9.2",
+    "mongoose": "^7.1.1",
+    "winston": "^3.8.2"
   }
 }
